[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["maxchernigov <vladsnak23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.27.0"
connection = "^2021.7.20"
pymongo = {extras = ["srv", "tls"], version = "^4.6.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
